--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -4,6 +4,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/setup-ruby@v1
+        with:
+          ruby-version: '2.6' 
       - run: |
           date > generated.txt
           git config user.name github-actions
