--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -11,7 +11,11 @@ jobs:
         uses: actions/setup-python@v1
         with:
           python-version: 3.8
-
+      - name: Dependencies
+        run: |
+          pip install pandas
+          pip install matplotlib
+          pip install seaborn
       - run: |
           date > generated.txt
           git config user.name github-actions
