--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -18,6 +18,10 @@ jobs:
           pip install seaborn
       - name: Run daily
         run: erb index.erb.html > index.html
+      - uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: .
       - run: |
           date > generated.txt
           git config user.name github-actions
