--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,4 +1,10 @@
-on: push
+on:
+  push:
+    branches: [ master ]
+  schedule:
+    - cron: 0 * * * *
+
+
 jobs:
   build:
     runs-on: ubuntu-latest
